# animated-emojis-rs

./: .gitignore  Cargo.toml  LICENSE  README.md  _typos.toml  docker-compose.yml  flake.nix
src/: config.rs  lib.rs  noto_animated_emoji.rs  noto_animated_emoji_generator.rs
src/snapshots/: animated_emojis_rs__noto_animated_emoji__tests__it_deserializes_metadata.snap  animated_emojis_rs__noto_animated_emoji__tests__it_generates_rust_file.snap  animated_emojis_rs__noto_animated_emoji__tests__it_returns_correct_lottie_download_url.snap  animated_emojis_rs__noto_animated_emoji_generator__tests__it_generates_rust_file.snap
static/noto_animated_emoji/lottie/1f642_200d_2194_fe0f/: lottie.json
static/noto_animated_emoji/lottie/1f642_200d_2195_fe0f/: lottie.json
