[package]
name = "animated-emojis-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
config = "0.13.4"
once_cell = "1.19.0"
reqwest = "0.12.2"
serde = "1.0.197"
serde_json = "1.0.114"

[dev-dependencies]
insta = { version = "1.36.1", features = ["yaml"] }
