[package]
name = "animated-emojis-rs"
version = "0.2.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/rbozan/animated-emojis-rs"
description = "Noto Animated emojis"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
config = "0.13"
once_cell = "1.20"
serde = "1.0.210"
serde_json = "1.0.131"

[dev-dependencies]
reqwest = "0.12"
tokio = { version = "1.40", features = ["macros"] }
insta = { version = "1.40", features = ["yaml"] }
